--- a/brewkrew/src/sass/core/variables.scss
+++ b/brewkrew/src/sass/core/variables.scss
@@ -1,8 +1,11 @@
-$hover-color: #cacaca40;
+$base-hover-color: #cacaca40;
+$base-color: #212121;
+$focus-color: #2196F3;
+
 $nav-list-background-color: #ffffff;
 $border-color: #dadada;
 $header-background-color: #fdfdfd;
 
-
 $button-icon-size: 40px;
 $button-border-radius: 20px;
+$search-field-width: 250px;
