--- a/brewkrew/src/sass/core/font.scss
+++ b/brewkrew/src/sass/core/font.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
+@import './variables';
 
 /* Set global font-family */
 * {
     font-family: 'Lato', sans-serif;
+    color: $base-color
 }
