--- a/brewkrew/src/sass/core/krew.scss
+++ b/brewkrew/src/sass/core/krew.scss
@@ -37,11 +37,6 @@
 
 			.bk-header {
 				text-align: center;
-
-				h1 {
-					text-transform: uppercase;
-					letter-spacing: 0.5em;
-				}
 			}
 		}
 	}
@@ -69,9 +64,9 @@
 	border: none;
 	padding: 0;
 	margin: 0;
+	border-radius: $button-border-radius;
 
 	&:hover, &:focus, &:active {
-		border-radius: $button-border-radius;
 		background-color: $base-hover-color;
 	}
 }
@@ -91,7 +86,6 @@
 			}
 
 			.bk-nav-list {
-				list-style: none;
 				display: flex;
 				flex-direction: column;
 				background-color: $nav-list-background-color;
@@ -113,12 +107,7 @@
 					}
 
 					a {
-						text-decoration: none;
 						color: $base-color;
-						font-size: 15px;
-						text-decoration: none;
-						text-transform: uppercase;
-						letter-spacing: 0.25em;
 						padding: 10px;
 						width: 100%;
 
@@ -141,9 +130,9 @@
 		border: none;
 		padding: 0px;
 		margin: 10px 0px 10px 5px;
-		font-size: 1em;
 		width: $search-field-width;
 		border-bottom: 1px solid $base-color;
+		background-color: $header-background-color;
 
 		&.bk-search-expand-animation {
 			width: 0px;
@@ -156,6 +145,41 @@
 
 		&:focus, &:active {
 			border-bottom-color: $focus-color;
+		}
+	}
+}
+
+.bk-search-result-dropdown-container {
+	position: absolute;
+    top: 75px;
+	max-height: 400px;
+	max-width: 300px;
+	overflow: scroll;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+
+	.bk-search-results {
+		padding: 10px;
+		margin: 0;
+		background-color: #fdfdfd;
+
+		.bk-search-result {
+			padding: 10px 10px 0px 10px;
+
+			&:hover {
+				background-color: $base-hover-color;
+			}
+
+			.bk-search-result-container {
+				padding-bottom: 10px;
+	
+				p {
+					margin: 5px;
+
+					&:last-child {
+						opacity: .75;
+					}
+				}
+			}
 		}
 	}
 }
