--- a/brewkrew/src/sass/core/variables.scss
+++ b/brewkrew/src/sass/core/variables.scss
@@ -6,6 +6,20 @@ $nav-list-background-color: #ffffff;
 $border-color: #dadada;
 $header-background-color: #fdfdfd;
 
-$button-icon-size: 40px;
+$button-icon-size: 2em;
 $button-border-radius: 20px;
 $search-field-width: 250px;
+
+$h1-font-size: 2em;
+$h1-letter-spacing: 0.5em;
+
+$basic-text-font-size: 0.75em;
+
+$text-letter-spacing: 0.25em;
+
+$heading-item-first: 0px 0px 0px 30px;
+$heading-item-second: 0px 30px 0px 0px;
+
+$heading-container-height: 75px;
+$bk-button-icon-font-size: 1.25em;
+$bk-nav-list-width: 250px;
