--- a/brewkrew/src/sass/core/krew.scss
+++ b/brewkrew/src/sass/core/krew.scss
@@ -12,7 +12,7 @@
 
 .bk-heading-container {
 	width: 100%;
-	height: 75px;
+	height: $heading-container-height;
 	position: fixed;
 	top: 0;
 	z-index: 100;
@@ -26,13 +26,16 @@
 		.bk-heading-item {
 			flex-grow: 1;
 			flex-basis: 0;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
 
 			&:first-child {
-				margin: 30px 0px 0px 30px;
+				margin: $heading-item-first;
 			}
 
 			&:last-child {
-				margin: 30px 30px 0px 0px;
+				margin: $heading-item-second;
 			}
 
 			.bk-header {
@@ -41,18 +44,17 @@
 		}
 	}
 
-	& + .bk-section {
-		position: relative;
-		top: 75px;
+	+ .bk-section {
+		top: $heading-container-height;;
 	}
 }
 
 .bk-button-icon {
-	font-size: 20px;
+	font-size: $bk-button-icon-font-size;
 	width: $button-icon-size;
 	height: $button-icon-size;
 
-	&:focus, &:active {
+	&:hover, &:focus, &:active {
 		.bk-icon {
 			color: $focus-color;
 		}
@@ -68,6 +70,20 @@
 
 	&:hover, &:focus, &:active {
 		background-color: $base-hover-color;
+	}
+}
+
+.bk-link {
+	text-decoration: none;
+	color: $base-color;
+
+	&:hover, &:focus, &:active {
+		color: $focus-color;
+		background-color: $base-hover-color;
+
+		.bk-icon {
+			color: $focus-color;
+		}
 	}
 }
 
@@ -90,7 +106,7 @@
 				flex-direction: column;
 				background-color: $nav-list-background-color;
 				padding: 0px;
-				width: 250px;
+				width: $bk-nav-list-width;
 				box-shadow: 0 1px 2px rgba(0,0,0,0.15);
 				margin: 0;
 			
@@ -102,19 +118,9 @@
 						border-bottom: none;
 					}
 
-					&:hover {
-						background-color: $base-hover-color;
-					}
-
 					a {
-						color: $base-color;
 						padding: 10px;
 						width: 100%;
-
-						&:focus, &:active {
-							color: $focus-color;
-							background-color: $base-hover-color;
-						}
 					}
 				}
 			}
@@ -136,7 +142,7 @@
 
 		&.bk-search-expand-animation {
 			width: 0px;
-			transition: width 0.5s ease-in-out
+			transition: width 0.5s ease-in-out;
 		}
 
 		&.bk-search-expanded {
@@ -144,6 +150,7 @@
 		}
 
 		&:focus, &:active {
+			background-color: $base-hover-color;
 			border-bottom-color: $focus-color;
 		}
 	}
@@ -183,3 +190,91 @@
 		}
 	}
 }
+
+.bk-down-link {
+	position: absolute;
+    border-radius: 25px;
+    z-index: 100000;
+    left: 50%;
+    bottom: 20px;
+	background-color: $header-background-color;
+    justify-content: center;
+    flex-direction: row;
+    display: flex;	
+	box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+
+	a {
+		display: flex;
+		text-align: center;
+		flex-direction: column;
+		justify-content: center;
+		letter-spacing: 0em;
+	}
+
+}
+
+
+.bk-section {
+	position: relative;
+	height: 500px;
+}
+
+//@media all and (max-width: 1280px) {}
+//@media all and (max-width: 980px) { ... }
+
+@media all and (max-width: 736px) {
+	.bk-button-icon {
+		width: 1.75em;
+		height: 1.75em;
+	}
+
+	.bk-search-container input {
+		width: 100px;
+		margin: 0px 0px 0px 5px;
+
+		&.bk-search-expanded {
+			width: 100px;
+		}		
+	}
+	
+	h1 {
+		font-size: 1em;
+		letter-spacing: 0.5em;
+	}
+
+	a, p, input {
+		font-size: 0.75em;
+	}
+
+	a, p {
+		letter-spacing: 0.25em;
+	}
+
+	.bk-heading-container {
+		.bk-heading {
+			.bk-heading-item {
+				&:first-child {
+					margin: 0px 0px 0px 10px
+				}
+	
+				&:last-child {
+					margin: 0px 10px 0px 0px;
+				}
+			}
+		}
+
+		+ .bk-section {
+			top: 50px;
+		}
+	}
+
+	.bk-button-icon {
+		font-size: 1.25em;
+	}
+
+	.bk-nav-list {
+		width: 175px;
+	}
+}
+
+//@media all and (max-width: 480px) {}
