--- a/brewkrew/src/sass/core/krew.scss
+++ b/brewkrew/src/sass/core/krew.scss
@@ -44,7 +44,7 @@
 		}
 	}
 
-	+ .bk-section {
+	+ .bk-sections-container {
 		top: $heading-container-height;;
 	}
 }
@@ -79,7 +79,6 @@
 
 	&:hover, &:focus, &:active {
 		color: $focus-color;
-		background-color: $base-hover-color;
 
 		.bk-icon {
 			color: $focus-color;
@@ -194,7 +193,7 @@
 .bk-down-link {
 	position: absolute;
     border-radius: 25px;
-    z-index: 100000;
+    z-index: 1;
     left: 50%;
     bottom: 20px;
 	background-color: $header-background-color;
@@ -214,9 +213,16 @@
 }
 
 
-.bk-section {
+.bk-sections-container {
 	position: relative;
-	height: 500px;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+
+	.bk-section {
+		position: relative;
+		height: 500px;
+	}
 }
 
 .bk-transform-reverse {
@@ -271,8 +277,8 @@
 			}
 		}
 
-		+ .bk-section {
-			top: 50px;
+		+ .bk-sections-container {
+			top: 75px;
 		}
 	}
 
