--- a/brewkrew/src/sass/core/krew.scss
+++ b/brewkrew/src/sass/core/krew.scss
@@ -53,6 +53,7 @@
 	font-size: $bk-button-icon-font-size;
 	width: $button-icon-size;
 	height: $button-icon-size;
+	cursor: pointer;
 
 	&:hover, &:focus, &:active {
 		.bk-icon {
@@ -76,6 +77,7 @@
 .bk-link {
 	text-decoration: none;
 	color: $base-color;
+	cursor: pointer;
 
 	&:hover, &:focus, &:active {
 		color: $focus-color;
@@ -203,6 +205,7 @@
 	box-shadow: 0 1px 2px rgba(0,0,0,0.15);
 
 	a {
+		cursor: pointer;
 		display: flex;
 		text-align: center;
 		flex-direction: column;
@@ -260,6 +263,7 @@
 				height: 100%;
 				display: block;
 				background: none;
+				cursor: pointer;
 
 				&:hover, &:focus, &:active {
 					background-color: $base-hover-color;
