--- a/brewkrew/src/sass/core/variables.scss
+++ b/brewkrew/src/sass/core/variables.scss
@@ -5,6 +5,7 @@ $focus-color: #2196F3;
 $nav-list-background-color: #ffffff;
 $border-color: #dadada;
 $header-background-color: #fdfdfd;
+$button-disabled-color: #2121213b;
 
 $button-icon-size: 2em;
 $button-border-radius: 20px;
