Center krew members

--- a/brewkrew/src/sass/core/krew.scss
+++ b/brewkrew/src/sass/core/krew.scss
@@ -345,6 +345,7 @@
 	flex-wrap: wrap;
 	padding: 15px;
 	height: 100%;
+	justify-content: center;
 
 	.bk-conqueror-container {
 		width: 200px;
@@ -460,7 +461,7 @@
 	
 	.bk-conquerors-container {
 		padding: 5px;
-	
+
 		.bk-conqueror-container {
 			width: auto;
 			height: auto;
