--- a/brewkrew/src/sass/core/variables.scss
+++ b/brewkrew/src/sass/core/variables.scss
@@ -10,6 +10,8 @@ $button-disabled-color: #2121213b;
 $button-icon-size: 2em;
 $button-border-radius: 20px;
 $search-field-width: 250px;
+$conqueror-image-size: 100px;
+
 
 $h1-font-size: 2em;
 $h1-letter-spacing: 0.5em;
