--- a/brewkrew/src/sass/core/krew.scss
+++ b/brewkrew/src/sass/core/krew.scss
@@ -55,7 +55,7 @@
 	height: $button-icon-size;
 	cursor: pointer;
 
-	&:hover, &:focus, &:active {
+	&.bk-active, &:hover, &:focus, &:active {
 		.bk-icon {
 			color: $focus-color;
 		}
@@ -249,7 +249,7 @@
 		display: flex;
 		width: 100%;
 		flex-wrap: wrap;
-		padding: 15px;
+		padding: 10px;
 
 		.bk-card-container {
 			width: 20%;
@@ -388,6 +388,28 @@
 	}
 }
 
+.bk-sortby-buttons-container {
+    padding-top: 5px;
+    display: flex;
+	justify-content: center;
+	
+	.bk-sortby-button {
+		margin: 0px 5px;
+	}
+}
+
+.bk-loading {
+	padding: 20px;
+	text-align: center;
+	
+	i {
+		color: $focus-color;
+	}
+
+	&.bk-loading-md {
+		font-size: 7.5em;
+	}
+}
 
 //@media all and (max-width: 1280px) {}
 //@media all and (max-width: 980px) { ... }
@@ -456,6 +478,7 @@
 	.bk-cards-container {
 		padding: 5px;
 		.bk-cards-row {
+			padding: 5px;
 			.bk-card-container {
 				width: 50%;
 				height: 100px;
