--- a/brewkrew/src/sass/core/global.scss
+++ b/brewkrew/src/sass/core/global.scss
@@ -11,6 +11,10 @@ button, a, input {
     outline: none;
 }
 
+a {
+    text-decoration: none;
+}
+
 h1, input, a, p {
     text-transform: uppercase;
 }
