--- a/brewkrew/src/sass/core/krew.scss
+++ b/brewkrew/src/sass/core/krew.scss
@@ -197,29 +197,33 @@
 	}
 }
 
-.bk-down-link {
-	position: absolute;
-    border-radius: 25px;
+.bk-map-buttons {
+    position: absolute;
     z-index: 1;
-    left: 50%;
     bottom: 20px;
-	background-color: $header-background-color;
-    justify-content: center;
-    flex-direction: row;
-    display: flex;	
-	box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    width: 100%;
+    display: flex;
+	justify-content: center;
 
-	a {
-		cursor: pointer;
-		display: flex;
-		text-align: center;
-		flex-direction: column;
+	.bk-down-link {
+		border-radius: 25px;
+		background-color: $header-background-color;
 		justify-content: center;
-		letter-spacing: 0em;
+		flex-direction: row;
+		display: flex;	
+		box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+
+		a {
+			cursor: pointer;
+			display: flex;
+			text-align: center;
+			flex-direction: column;
+			justify-content: center;
+			letter-spacing: 0em;
+		}
+
 	}
-
 }
-
 
 .bk-sections-container {
 	position: relative;
